# cc

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  README_CN.md  docker-compose.yml  pyproject.toml
.claude/skills/: agent-platform.md
.claude/skills/agent-core/: SKILL.md
.claude/skills/agent-platform/: SKILL.md
.claude/skills/agent-sandbox/: SKILL.md
.github/workflows/: test.yml
agent_core/: __init__.py  compaction.py  hooks.py  loop.py  recovery.py
agent_core/llm/: __init__.py  client.py
agent_core/tools/: __init__.py  registry.py
api/: main.py  middleware.py
api/routes/: tasks.py
docs/: ARCHITECTURE.md  THINKING.md
orchestrator/: cron.py  queue.py  worker.py
sandbox/: Dockerfile.sandbox  bootstrap.py
sandbox/providers/: __init__.py  base.py  docker_provider.py
shared/: models.py
static/: index.html
tests/: conftest.py  test_shared_models.py
tests/agent_core/: test_compaction.py  test_hooks.py  test_llm_client.py  test_loop.py  test_recovery.py  test_tool_registry.py
tests/api/: test_main.py  test_middleware.py  test_task_routes.py
tests/orchestrator/: test_cron.py  test_queue.py  test_worker.py
tests/sandbox/: test_bootstrap.py  test_providers.py
tests/tools/: test_bash.py  test_file_read.py  test_file_write.py  test_glob_search.py
tools/core/: __init__.py  bash.py  file_read.py  file_write.py  glob_search.py
